# project_ivf_flow

./: README.md  poem.txt  pyproject.toml
files_csv/: עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 1 (1).csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 2.csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 3.csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 4.csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 5.csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 6.csv  עותק של fertility-treatment-2022-preliminary-trends-and-figures-underlying-dataset.xlsx - Table 7.csv
src/project_ivf_flow/: main.py
src/project_ivf_flow/crews/data_preprocessing_and_analysis/: data_preprocessing_and_analysis.py
src/project_ivf_flow/crews/data_preprocessing_and_analysis/config/: agents.yaml  tasks.yaml
src/project_ivf_flow/crews/exploratory_data_analysis/: exploratory_data_analysis.py
src/project_ivf_flow/crews/insights_and_interpretation/: insights_and_interpretation.py
src/project_ivf_flow/crews/poem_crew/: poem_crew.py
src/project_ivf_flow/crews/statistical_modeling/: statistical_modeling.py
src/project_ivf_flow/crews/visualization_and_reporting/: visualization_and_reporting.py
